<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/main_group"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_alerts"
            android:icon="@drawable/ic_action_priority_high"
            android:title="@string/alerts" />

        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_action_schedule"
            android:title="@string/schedule" />

        <item
            android:id="@+id/nav_speaker_details"
            android:icon="@drawable/ic_action_person"
            android:title="@string/speaker_details" />

        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_action_feedback"
            android:title="@string/feedback" />

        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_action_exit_to_app"
            android:title="@string/sign_out" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_action_info"
            android:title="@string/about" />
    </group>
</menu>