<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/alert_card"
        style="@style/StandardCardView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:orientation="vertical">

            <TextView
                android:id="@+id/author_details_text_view"
                style="@style/StandardTextBody" />

            <TextView
                android:id="@+id/paper_title_text_view"
                style="@style/StandardTextHeader"
                android:layout_marginBottom="10dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/colorAccent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/StandardTextBody"
                        android:layout_marginTop="0dp"
                        android:text="@string/paper" />

                    <TextView
                        style="@style/StandardTextBody"
                        android:layout_marginTop="0dp"
                        android:text="@string/room" />

                    <TextView
                        style="@style/StandardTextBody"
                        android:layout_marginTop="0dp"
                        android:text="@string/time" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/paper_id_text_view"
                        style="@style/StandardTextBody"
                        android:layout_marginTop="0dp" />

                    <TextView
                        android:id="@+id/room_text_view"
                        style="@style/StandardTextBody"
                        android:layout_marginTop="0dp" />

                    <TextView
                        android:id="@+id/time_text_view"
                        style="@style/StandardTextBody"
                        android:layout_marginTop="0dp" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>